<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Register_activity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logomovies" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toStartOf="@id/lastNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/nomusuariInputRegistro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewnomUsuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/nom_d_usuari_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/firstNameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInputLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toEndOf="@id/firstNameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/cognomsInputRegistro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewcognoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/cognoms_d_usuari_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/lastNameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInputLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewnomUsuari"
        app:layout_constraintEnd_toEndOf="@id/firstNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aniversari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/_16_11_2005_birthday_example"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewnombirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/data_d_aniversari_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/birthday"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewcognoms"
        app:layout_constraintStart_toStartOf="@id/textViewcognoms"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/n_mero_de_tel_fon_example"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewtelefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="(+34) 672435678"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewnombirthday"
        app:layout_constraintStart_toStartOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/user123_example"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/username_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewusername"
        app:layout_constraintStart_toStartOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/exemple_gmail_com_example"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewgmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/gmail_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/gmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewgmail"
        app:layout_constraintStart_toStartOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenya1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="1234"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewpw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/contrasenya_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/pw1" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewpw1"
        app:layout_constraintStart_toStartOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenya2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="1234"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewpw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/confirmar_contrasenya_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/pw2" />


    <Button
        android:id="@+id/iniciSessio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/iniciar_sessi_text"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/textViewpw2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/sortir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="Sortir"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/textViewpw2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pw2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
